# __LearningLog__GoodJobInK8s

./: .env.template  .gitignore  README.md  pyproject.toml
crawler/: Dockerfile  requirements-crawler.txt
crawler/jobscraper/: database.py
crawler/jobscraper/spiders/: a518spider.py
kubernetes_object/: crawler.yaml  mysql_service.yaml  mysql_statefulset.yaml
