[tool.poetry]
name = "goodjob"
version = "0.1.0"
description = ""
authors = ["Chuan <kirk336neo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
requests = "^2.32.3"
scrapy = "^2.11.2"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
pip = "^24.2"
packaging = "^24.1"
setuptools = "^74.1.3"
scrapeops-scrapy = "^0.5.6"

[build-system]
requires = [
    "setuptools",
    "packaging",
    "wheel",
]
build-backend = "poetry.core.masonry.api"
